# recipes-mvp

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: actions.md  build-setup.md  components.md  design-patterns.md  index.md  language.md  performance.md  publishing.md  stores.md  testing.md  transitions.md  walkthroughs.md
