[tool.poetry]
name = "recipes-mvp"
version = "1.0.0"
description = "MVP repo to just start collecting recipes for [Svelte Community](https://github.com/sveltejs/community). The core inspiration is https://vuejs.org/v2/cookbook/. this package.json is just for maintenance work"
authors = [""]
license = "MIT"
readme = "README.md"
homepage = ""
documentation = ""
repository = "https://github.com/svelte-society/recipes-mvp"
keywords = ["svelte", "sveltejs", "community"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.0"
mkdocs-minify-plugin = "^0.3.0"
mkdocs-git-revision-date-localized-plugin = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
